Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,7 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com'.s # 'www.vandelay.com'"
+    "'vandelay.com'.startswith('www.') # 'www.vandelay.com'"
    ]
   },
   {
